Bug 249903 - Unreviewed non-unified-sources build fix
Summary: Unreviewed non-unified-sources build fix
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: New Bugs (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Zan Dobersek (Reviews)
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2022-12-27 01:53 PST by Zan Dobersek
Modified: 2022-12-27 05:25 PST (History)
1 user (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Zan Dobersek 2022-12-27 01:53:26 PST
.
Comment 1 Zan Dobersek 2022-12-27 02:03:27 PST
Pull request: https://github.com/WebKit/WebKit/pull/8075
Comment 2 EWS 2022-12-27 05:24:17 PST
Committed 258340@main (57d89c89af08): <https://commits.webkit.org/258340@main>

Reviewed commits have been landed. Closing PR #8075 and removing active labels.
Comment 3 Radar WebKit Bug Importer 2022-12-27 05:25:17 PST
<rdar://problem/103725826>