Unreviewed non-unified-sources build fix https://bugs.webkit.org/show_bug.cgi?id=249903

Unreviewed, adjusting inclusions, namespace qualifiers and other
bits to get basic non-unified-sources build working.

* Source/WebCore/Modules/badge/WorkerBadgeProxy.h:
* Source/WebCore/css/CSSBackgroundRepeatValue.cpp:
* Source/WebCore/css/parser/CSSParserImpl.h:
* Source/WebCore/css/parser/CSSPropertyParserHelpers.cpp:
* Source/WebCore/page/WorkerNavigator.h:
* Source/WebKit/NetworkProcess/storage/CacheStorageCache.h:
* Source/WebKit/NetworkProcess/storage/CacheStorageDiskStore.h:
* Source/WebKit/NetworkProcess/storage/CacheStorageStore.h:
* Source/WebKit/Shared/WebWheelEventCoalescer.cpp:
(WebKit::WebWheelEventCoalescer::shouldDispatchEvent):
* Source/WebKit/Shared/WebWheelEventCoalescer.h:
(WebKit::WebWheelEventAndSteps::WebWheelEventAndSteps):
* Source/WebKit/UIProcess/SubframePageProxy.cpp:
* Source/WebKit/UIProcess/SubframePageProxy.h:
* Source/WebKit/WebProcess/Cache/WebCacheStorageConnection.cpp:

Canonical link: https://commits.webkit.org/258340@main