Source/WebCore/css/parser/CSSParserImpl.h
@@ -34,6 +34,7 @@
 #include "CSSParserTokenRange.h"
 #include "CSSProperty.h"
 #include "CSSPropertyNames.h"
+#include "StyleRule.h"
 #include <memory>
 #include <wtf/Vector.h>
 #include <wtf/text/WTFString.h>
